# rag-indexer

./: README.md  main.py  pyproject.toml  test_chunk.py  test_e2e.py  test_extract.py
output/: chunks.json  index.faiss
rag_indexer/: __init__.py  cli.py  config.py  embedding.py  indexer.py  searcher.py
rag_indexer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
