[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-indexer"
version = "1.0.0"
description = "Index PDF documents for RAG (Retrieval-Augmented Generation) with semantic search"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["rag", "retrieval", "embedding", "faiss", "semantic-search", "pdf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "PyMuPDF>=1.24.0",
    "faiss-cpu>=1.7.4",
    "numpy>=1.24.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
local = [
    "sentence-transformers>=2.2.0",
]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
]

[project.scripts]
rag-index = "rag_indexer.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/rag-indexer"
Repository = "https://github.com/yourusername/rag-indexer"

[tool.setuptools.packages.find]
include = ["rag_indexer*"]
